# cubtera

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.api  Dockerfile.cli  LICENSE  README.md  SECURITY.md  release-config.json
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/DISCUSSION_TEMPLATE/: bugs.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/docs/: api.md  config.md  im.md  tf.md  unit.md
.github/workflows/: beta-release.yaml  code_pr_test.yaml  pr_test.yaml  release-config.json  release_please.yaml  test.yaml
example/: config.toml
example/inventory/cubtera/dc/: mgmt-use2.json  preprod-use2.json  prod-euw1.json  prod-use1.json  prod-use2.json  stg1-use2.json  stg2-euw1.json
example/inventory/cubtera/dome/: mgmt.json  prod.json  stg.json
example/inventory/cubtera/env/: .default:meta.json  mgmt.json  preprod.json  prod.json  stg1.json
example/inventory/cubtera/mongodb/: .default:meta.json  orders.json  users.json
example/inventory/cubtera/service/: .default:manifest.json  .default:meta.json  admin.json  admin:manifest.json  api.json  app.json  order.json
example/modules/module01/: main.tf
example/modules/module02/: main.tf
example/remote_folder/: test.txt
example/units/bash_unit01/: manifest.toml  test.sh
example/units/cubtera/tf_unit02/: manifest.toml
example/units/tf_unit01/: main.tf  manifest.toml  user_data.json
example/units/tf_unit01/tests/: main.tftest.hcl
example/units/tf_unit01/tests/setup/: main.tf
example/units/tf_unit02/: main.tf  manifest.toml  random_pet.tf
src/: error.rs  lib.rs
src/core/: mod.rs
src/core/bom/: mod.rs
src/core/cfg/: README.md  config.rs  error.rs  loader.rs  mod.rs
src/core/dim/: mod.rs  readme.md
src/core/dim/data/: jsonfile.rs  mod.rs  mongodb.rs
src/core/dlog/: mod.rs
src/core/im/: mod.rs
src/core/runner/: mod.rs  params.rs  readme.md
src/core/runner/bash/: mod.rs  params.rs
src/core/runner/tf/: mod.rs  params.rs  tfswitch.rs
src/core/runner/tofu/: mod.rs
src/core/unit/: manifest.rs  mod.rs  readme.md
src/tools/: collections.rs  compat.rs  crypto.rs  db.rs  error.rs  fs.rs  git.rs  json.rs  mod.rs  process.rs  string.rs
src/tools/tests/: collections_tests.rs  crypto_tests.rs  db_tests.rs  error_tests.rs  fs_tests.rs  git_tests.rs  json_tests.rs  mod.rs  process_tests.rs  string_tests.rs
src/utils/: helper.rs  mod.rs
tests/: api_tests.rs  cli_tests.rs
