[package]
name = "cubtera"
version = "1.0.8"

edition = "2021"
license = "Apache-2.0"
authors = ["Cubtera", "denzalman"]
repository = "https://github.com/cubtera/cubtera"
exclude = [
    "bin/**",
    "target/**",
    "example/**",
    ".github/**",
    "Dockerfile.*",
    "_api/**",
    "_cli/**",
    "main.rs",
]

[lib]
name = "cubtera"
path = "src/lib.rs"

[[bin]]
name = "cubtera-api"
path = "src/bin/api/main.rs"

[[bin]]
name = "cubtera"
path = "src/bin/cli/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "cargo", "env"] }
config = { version = "0.14", features = ["yaml", "toml"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
jsonschema = "0.21"
anyhow = "1.0"
serde_json = "1"
semver = "1.0"
toml = "0.8"
walkdir = "2"
chrono = "0.4"
rand = "0.8"
zip = "2.2.0"
rocket = { version = "0.5", default-features = false, features = ["json"] }
#lazy_static = "1.5"
mongodb = { version = "2.8.2", default-features = false, features = ["sync"] }
whoami = "1.5"
log = "0.4"
env_logger = "0.11.5"
libc = "0.2.155"
once_cell = "1.19.0"
yansi = "1.0.1"
handlebars = "6.1.0"

[dev-dependencies]
mockall = "0.13"
assert_cmd = "2"
predicates = "3"
rand = "0.8"
tempfile = "3"
