[package]
name = "cubtera"
version = "1.0.15"

edition = "2021"
license = "Apache-2.0"
authors = ["Cubtera", "denzalman"]
repository = "https://github.com/cubtera/cubtera"
exclude = [
    "bin/**",
    "target/**",
    "example/**",
    ".github/**",
    "Dockerfile.*",
    "_api/**",
    "_cli/**",
    "main.rs",
]

[lib]
name = "cubtera"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "cubtera-api"
path = "src/bin/api/main.rs"

[[bin]]
name = "cubtera"
path = "src/bin/cli/main.rs"

# The public documentation is minimal and doesn't change between
# platforms, so we only build them for linux on docs.rs to save
# their build machines some cycles.
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap = { version = "4", features = ["derive", "cargo", "env"] }
config = { version = "0.15", features = ["yaml", "toml"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
openssl = { version = "0.10", features = ["vendored"] }
jsonschema = "0.30"
anyhow = "1.0"
serde_json = "1"
semver = "1.0"
toml = "0.8"
walkdir = "2"
chrono = "0.4"
rand = "0.9"
zip = "2.2.0"
rocket = { version = "0.5", default-features = false, features = ["json"] }
mongodb = { version = "3.1.0", features = ["sync", "dns-resolver"] }
whoami = "1.5"
log = "0.4"
env_logger = "0.11.5"
libc = "0.2.155"
once_cell = "1.19.0"
yansi = "1.0.1"
handlebars = "6.1.0"
git2 = "0.20"
sha2 = "0.10.8"

[dev-dependencies]
mockall = "0.13"
assert_cmd = "2"
predicates = "3"
rand = "0.9"
tempfile = "3"
